<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="add_new_city">Add new city</string>
    <string name="settings">Settings</string>
    <string name="city_management">City Management</string>
    <string name="search_string_add_new_city">Search @string/add_new_city</string>
    <string name="search_city">Search City</string>
    <string name="sion">Sion</string>
    <string name="fribourg">Fribourg</string>
    <string name="this_is_the_result_of_the_research">This is the result of the research</string>

    <string name="base_item_text_title">00:00</string>
    <string name="TEMP_EXAMPLE_Today">Today</string>
    <string name="TEMP_EXAMPLE_Sunny_weather">Sunny weather</string>
    <string name="info_temperature">%1$d °C</string>
    <string name="start_fragment_title">Weather Forecast</string>
    <string name="search_city_fragment_title">Search new city</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="main_info_wind">Wind : %1$d km/h</string>
    <string name="main_info_temperature">Temperature : %1$d °C</string>
    <string name="main_info_humidity">Humidity : %1$d %%</string>
    <string name="main_info_pressure">Pressure : %1$d Pa</string>
    <string name="main_info_temp_min">Temp min : %1$d °C</string>
    <string name="main_info_temp_max">Temp max : %1$d °C</string>
</resources>
